--- a/package.json
+++ b/package.json
@@ -3,20 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
+    "@supabase/supabase-js": "^2.56.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
-    "framer-motion": "^12.6.3",
+    "axios": "^1.11.0",
+    "disqus-react": "^1.1.7",
+    "framer-motion": "^12.23.12",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.0",
-    "react-scripts": "^5.0.1",
+    "socket.io-client": "^4.8.1",
+    "tailwindcss": "^4.1.12",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -42,5 +48,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.12",
+    "autoprefixer": "^10.4.21",
+    "html-webpack-plugin": "^5.5.3",
+    "postcss": "^8.5.6",
+    "postcss-loader": "^8.1.1",
+    "react-scripts": "^5.0.1"
   }
 }
