--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,22 @@
 # Dependencies
 /node_modules
-/.pnp
-.pnp.js
+/backend/node_modules
 
-# Testing
-/coverage
-
-# Production
+# Build directory
 /build
 
-# Misc
-.DS_Store
+# Environment variables
 .env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.*
+!.env.example
 
+# Log files
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Backend
-backend/node_modules
-backend/.env
+# IDE specific
+.idx/
+
+# System files
+.DS_Store
